fix : 파일 경로 병합, 예외 처리 수정, V5 SQL문 수정